# atlas-archetype

./: .coveragerc_e2e  .coveragerc_unit  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
ai-development/: APP.md  ARCHITECTURE.md  CODING.md
docs/: architecture.md
src/application/commons/: data_transform.py  date_format.py
src/application/game/command/: service.py  usecase.py
src/application/game/query/: service.py  usecase.py
src/application/healthcheckers/: entity.py  interface.py  service.py  usecase.py
src/domain/game/: exception.py
src/domain/game/base/: entity.py
src/domain/game/command/: entity.py  repository.py  usecase.py
src/domain/game/query/: entity.py  repository.py  usecase.py
src/infrastructure/: settings.py
src/infrastructure/broker/rabbitmq/: config.py  interface.py  settings.py
src/infrastructure/database/mongodb/: config.py  interface.py  settings.py
src/infrastructure/database/mongodb/models/: base.py  game.py
src/infrastructure/database/mongodb/repositories/: base.py
src/infrastructure/database/postgresql/: config.py  interface.py  settings.py
src/infrastructure/database/postgresql/migrations/: env.py
src/infrastructure/database/postgresql/models/: base.py  game.py
src/infrastructure/database/postgresql/repositories/: base.py
src/infrastructure/logger/: config.py
src/presentation/api/: main.py
src/presentation/api/commons/: exception_handlers.py
src/presentation/api/resources/game/: dtos.py  routes.py
src/presentation/api/resources/healthcheckers/: dtos.py  routes.py
src/presentation/consumer/: __main__.py
src/presentation/consumer/handlers/: etl.py
tests/e2e/: conftest.py
tests/unit/: conftest.py
tests/unit/application/commons/: test_date_format.py
tests/unit/application/game/query/: test_service.py  (+1 more)
tests/unit/application/healthcheckers/: test_service.py  test_usecase.py
tests/unit/infrastructure/logger/: test_logger.py
(+24 files in other folders)
