[tool.poetry]
name = "atlas"
version = "0.1.0"
description = "Skeleton for APIs"
authors = ["ARQ"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.136.0"
uvicorn = "^0.49.0"
pydantic = "^2.13.0"
aio-pika = "^9.6.0"
pydantic-settings = "^2.14.0"
gunicorn = "^26.0.0"
sqlalchemy = "^2.0.50"
sqlmodel = "^0.0.38"
alembic = "^1.18.0"
asyncpg = "^0.31.0"
httpx = "^0.28.0"
python-dateutil = "^2.9.0"
structlog = "^25.5.0"
ddtrace = {version = "^4.10.0", python = "<3.15"}
fast-depends = "^3.0.0"
loguru = "^0.7.3"
motor = {extras = ["srv"], version = "^3.7.0"}
dnspython = "^2.8.0"
fastapi-pagination = "^0.15.0"
beanie = ">=1.26.0,<2.0"
h11 = "^0.16.0"
idna = "^3.15"
mako = "^1.3.12"
python-dotenv = "^1.2.2"
setuptools = "^78.1.1"
virtualenv = "^20.36.1"
filelock = "^3.20.3"

[tool.poetry.group.test.dependencies]
pydantic = "^2.13.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.4.0"
pytest-mock = "^3.15.0"
gevent = "^26.5.0"
respx = "^0.23.0"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.linter.dependencies]
pre-commit = "^4.6.0"
ruff = "^0.15.0"

[tool.ruff]
exclude = ["migrations"]
line-length = 88

[tool.ruff.lint]
ignore = ["ANN101", "ANN002", "ANN003", "B008", "I001"]
select = ["E", "F", "B", "I", "N", "ANN", "W", "C"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 13

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ['*main.py', '*setting*', 'tests/*']

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
